--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           </div>
         </div>
 		<div class="p-2 w-full pt-8 mt-8 border-t border-gray-800 text-center">
-		<p>Already have an account.</p>		<a href="D:\web\signin.html" class="text-indigo-400" >    Sign In-></a>
+		<p>Already have an account.</p>		<a href="https://shaurya-omg.github.io/signin/" class="text-indigo-400" >    Sign In-></a>
 		</div>
         <div class="p-2 w-full">
           <button id="login" name="login" class="flex mx-auto text-white bg-indigo-500 border-0 py-2 px-8 focus:outline-none hover:bg-indigo-600 rounded text-lg">Sign Up</button>
@@ -40,7 +40,7 @@
 		  </div>
         <div class="p-2 w-full pt-8 mt-8 border-t border-gray-800 text-center">
           <a href="https://instagram.com/shaurya_69_001?igshid=ZDc4ODBmNjlmNQ==" class="text-indigo-400">@Shaurya</a>
-          <a href="D:\web\index.html" class="text-indigo-400"><p class="leading-normal my-5">Shaurya Gupta</a>
+          <a href="https://shaurya-omg.github.io/home/" class="text-indigo-400"><p class="leading-normal my-5">Shaurya Gupta</a>
             <br>Website Develper
           </p>
           <span class="inline-flex">
